--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <li class="list"><a class="link" href="#Sources">Resources/References</a></li>
 <li class="list"><a class="link" href="#Plat">Important Platforms</a></li>
 </ul>
-<div class="polaroid"><img id="mypic" src="0[2].jpg">
+<div class="polaroid"><img id="mypic" src="0[2].jpg" alt="A picture of a girl">
 <div class="container"><p><span>A 20 years old Engineer student, passionate about arts, music and programming!</span></p></div></div>
 <div id="mainpart"><h1 id="Info">Personal Info</h1>
 <p id="two">Name: Shayma Elsayed <br>
